feat: add initial benchmark implementation